--- a/frontend/src/game/game.css
+++ b/frontend/src/game/game.css
@@ -3,5 +3,5 @@
 	object-fit: contain;
 	min-width: 80px;
 	min-height: 50px;
-	margin: 20px;
+	/* margin: 20px; */
 }
