--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,8 +8,10 @@
 html, body {
   width: 100%;
   height: 100%;
+  min-width: 700px;
+  min-height: 500px;
   /* Prevents overflow causing scroll */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 :root {
@@ -19,7 +21,7 @@ html, body {
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #c71e1e;
+  background-color: black;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
