--- a/frontend/src/mainGrid/MainGrid.css
+++ b/frontend/src/mainGrid/MainGrid.css
@@ -1,26 +1,35 @@
 .parent {
-	display: grid;
-	grid-template-columns: 3fr 1fr;
-	grid-template-rows: 1fr 6fr;
-	grid-column-gap: 0px;
-	grid-row-gap: 0px;
-	height: 100%;
-	width: 100%;
-	max-height: 100vh;
-	max-width: 100vw;
+    display: grid;
+    grid-template-columns: 3fr 1fr; /* 3:1 ratio for game to chat width */
+    grid-template-rows: 15% 85%; /* 15:85 ratio for header to game/chat height */
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    
+    height: 100vh; /* Full viewport height */
+    max-height: 100vh;
+    width: 100vw; /* Full viewport width */
+    max-width: 100vw;
+
+    overflow: hidden; /* Changed to hidden to prevent overflow */
 }
 
 .header {
-	grid-area: 1 / 1 / 2 / 3;
-	background-color: rgb(1, 57, 1);
+    grid-area: 1 / 1 / 2 / 3;
+    background-color: rgb(1, 57, 1);
+    width: 100%;
+    height: 100%; /* Take full height of its row */
 }
 
 .game {
-	grid-area: 2 / 1 / 3 / 2;
-	background-color: rgb(2, 2, 58);
+    grid-area: 2 / 1 / 3 / 2;
+    background-color: rgb(2, 2, 58);
+    width: 100%; /* Take full width of its column */
+    height: 100%; /* Take full height of its row */
 }
 
 .chat {
-	grid-area: 2 / 2 / 3 / 3;
-	background-color: rgb(68, 2, 2);
+    grid-area: 2 / 2 / 3 / 3;
+    background-color: rgb(68, 2, 2);
+    width: 100%; /* Take full width of its column */
+    height: 100%; /* Take full height of its row */
 }
